@@ -1,4 +1,4 @@
- /* config.h for snapwm.c [ 0.2.5 ]
+ /* config.h for snapwm.c [ 0.2.6 ]
  *
  *  Started from catwm 31/12/10
  *  Permission is hereby granted, free of charge, to any person obtaining a
@@ -25,6 +25,7 @@
 #define CONFIG_H
 
 #define RCFILE "/home/pnewm/.snapwmrc"
+#define UF_ALPHA 0.6
 
 #define CLEANMASK(mask) (mask & ~(numlockmask | LockMask))
 
